# azure-storage-fuse

./: .gitignore  .gitmodules  .golangci.yml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  DOCKER_TESTING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  KnownLimitations.txt  LICENSE  MIGRATION.md  NOTICE  NOTICE.txt  NOTICES  OTEL_LOGGING.md  OTEL_SETUP.md  OTEL_TESTING.md  README.md  RELEASE_LOGS_README.md  STREAMING.md  SampleCustomConfig.yaml  TESTING_SUMMARY.md  TSG.md  _config.yaml  _config.yml  azfuse-logs.txt  azure-nightly-pipeline.yaml  azure-pipelines.yml  blobfuse-artifacts.yml  blobfuse-gen1-artifacts.yml  blobfuse-nightly.yml  blobfuse-release2.yaml  blobfuse-start.sh  blobfuse-stop.sh  blobfuse2-1es_ci.yaml  blobfuse2-ci.yaml  blobfuse2-code-coverage.yaml  blobfuse2-data-validation.yaml  (+60 more)
azure-storage-cpp-lite/: CMakeLists.txt
azure-storage-cpp-lite/include/: common.h  constants.h  delete_blob_request_base.h  delete_container_request_base.h  executor.h  get_blob_property_request_base.h  get_blob_request_base.h  get_block_list_request_base.h  get_page_ranges_request_base.h  hash.h  http_base.h  list_blobs_request_base.h  list_containers_request_base.h  put_blob_request_base.h  put_block_request_base.h  put_page_request_base.h  retry.h  storage_EXPORTS.h  storage_account.h  storage_credential.h  storage_outcome.h  storage_request_base.h  storage_stream.h  storage_url.h  utility.h  xml_parser_base.h  xml_writer.h
azure-storage-cpp-lite/include/blob/: blob_client.h  copy_blob_request.h  create_block_blob_request.h  create_container_request.h  delete_blob_request.h  delete_container_request.h  download_blob_request.h  get_blob_property_request.h  get_block_list_request.h  get_container_property_request.h  (+5 more)
azure-storage-cpp-lite/sample/: CMakeLists.txt  sample.cpp
azure-storage-cpp-lite/src/: append_block_request_base.cpp  base64.cpp  constants.cpp  copy_blob_request_base.cpp  create_container_request_base.cpp  delete_blob_request_base.cpp  delete_container_request_base.cpp  get_blob_property_request_base.cpp  get_blob_request_base.cpp  get_block_list_request_base.cpp  get_container_property_request_base.cpp  get_page_ranges_request_base.cpp  hash.cpp  list_blobs_request_base.cpp  list_containers_request_base.cpp  put_blob_request_base.cpp  put_block_list_request_base.cpp  put_block_request_base.cpp  put_page_request_base.cpp  storage_account.cpp  storage_credential.cpp  storage_url.cpp  tinyxml2.cpp  tinyxml2_parser.cpp  utility.cpp
cpplite/adls/: CMakeLists.txt
nfs/: CMakeLists.txt  README  build.sh  sample-config.yaml  tsan_suppressions.txt  vcpkg-configuration.json  vcpkg.json
nfs/CMake/: Findfuse3.cmake  Findtcmalloc.cmake
nfs/inc/: aznfsc.h  aznfsc_config.h.in  connection.h  file_cache.h  fs-handler.h  fuse_optype.h  log.h  nfs_api_context.h  nfs_client.h  nfs_fileHandle.h  nfs_inode.h  nfs_internal.h  nfs_transport.h  nofuse.h  readahead.h  rpc_readdir.h  rpc_stats.h  rpc_task.h  rpc_transport.h  util.h
nfs/src/: config.cpp  connection.cpp  file_cache.cpp  log.cpp  main.cpp  nfs_client.cpp  nfs_inode.cpp  nfs_internal.cpp  nfs_transport.cpp  nofuse.cpp  readahead.cpp  rpc_readdir.cpp  rpc_stats.cpp  rpc_task.cpp  rpc_transport.cpp  util.cpp
test/: 1  CMakeLists.txt  CMakeLists.txt.in  attribcachesynchronizationtests.cpp  attribcachetests.cpp  cpplitetests.cpp  feature_test.go  hierarchical_test.cpp  oauthtokencredentialmanagertests.cpp  oauthtokentests.cpp  statscollectortest.go  stressTest  stressTest.go  test_base.h  testing.py  tests.py
test/STESample/: go.mod  go.sum  main.go  steSample.go
test/accountcleanup_container/: accountcleanup_container_test.go
test/accountcleanup_share/: accountcleanup_share_test.go
test/accoutcleanup/: accountcleanup_test.go
test/ai/: checkpointLoad.sh  datasetDownload.py  kaggle.json  kaggle_download.py  load.py  master_mount.sh  mdata.sh  ray_blobfuse_pipeline.py  saveModel.py
test/benchmark_test/: benchmark_test.go  bitmap_bench_test.go  fio.cfg
test/csi_driver_test/: Dockerfile
test/dcache_integration/: main.go
test/dcache_latency/: main.go
test/dcache_tuning/: main.go
test/distributed_cache/: test-cluster.sh
test/e2e_tests/: custom_component_test.go  data_validation_test.go  dir_test.go  file_test.go  truncate_test.go
test/fio/: fio_fuse_integrity.sh  hole_inside_blocks.fio  hole_over_blocks.fio  rand-read.fio  rand-write-10f-10th.fio  rand-write.fio  rw.fio  seq-read-10f-10th.fio  seq-read-1f-10th.fio  seq-read.fio  seq-rw.fio  seq-write-10f-10th.fio  seq-write-1f-10th.fio  seq-write.fio  verify-basic.fio  verify-mixed.fio  verify-sharedfile-no-overlap.fio
test/longhaul/: build_kernel.sh  long_stress.go  longhaul.sh  stresstest.sh  telemetrytest.sh
test/mlperf/: checkpoint.sh  setup.sh  train.sh
test/mount_test/: mount_test.go
test/not-automated/: blobrace.py  multi_open_test.go  multi_open_test.py  multi_open_test.sh
test/perf_test/: generate_perf_report.py  resnet50_classify.py
test/sample_custom_component1/: go.mod  main.go
test/sample_custom_component2/: go.mod  go.sum  main.go
test/scenarios/: blk_cache_integrity_test.go  create_test.go  fs_integrity_test.go  fsync_test.go  init_test.go  mmap_test.go  o_trunc_flag_test.go  open_test.go  read_test.go  read_write_test.go  truncate_test.go  unlink_test.go  write_test.go
test/scripts/: blobnfs.sh  coveragecheck.sh  cpp3run.sh  cppparrun.sh  cpuidle.sh  dd.sh  depends.sh  dirIterate.go  extended_dd.sh  file_block_compare.sh  file_edit_md5.sh  fio.sh  fio_auto.sh  fio_block_file.sh  fio_tests.csv  flush_test.c  fsync_sample.c  git_clone.sh  go3run.sh  goparrun.sh  latency_hiding.jl  multi_write.sh  overnight.sh  overnightstress.sh  parallel_batch_read.py  pread.sh  profile-latency-hiding.sh  pwrite.sh  read.py  read.sh  readwrite.c  rman_backup.sh  rman_backup_simulation.sh  run.sh  stresstest.sh  stripe_write.sh  test_cases.csv  test_write_large_data_and_noflush.txt  write.py  write.sh  (+1 more)
test/sdk_test/: sdk_test.go
test/stress_test/: stress_test.go
test/test_utils/: dir_list_seek.c
(+1407 files in other folders)
